syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "pt.isep.tmdei.packagemanagement";

message CreatePackageRequest {
  int32 weight = 1;
  int32 height = 2;
  int32 width = 3;
  string delivery = 4;
}

message CreatePackageResponse {
  string packageId = 1;
}

service PackageService {
  rpc createPackage(CreatePackageRequest) returns (CreatePackageResponse);
}