syntax = "proto3";

package schedulerservice;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "pt.isep.tmdei.schedulerservice";

message CreateDeliveryRequest {
  string username = 1;
  int64 pickup_latitude = 2;
  int64 pickup_longitude = 3;
  int64 dropOff_latitude = 4;
  int64 dropOff_longitude = 5;
}

message CreateDeliveryResponse {
  string username = 1;
  string delivery = 2;
  int64 pickup_latitude = 3;
  int64 pickup_longitude = 4;
  int64 dropOff_latitude = 5;
  int64 dropOff_longitude = 6;
  google.protobuf.Timestamp created = 7;
  string status = 8;
  bool expedited = 9;
}

service SchedulerService {
  rpc scheduleDelivery(CreateDeliveryRequest) returns (CreateDeliveryResponse);
}